# free

./: .gitignore  Cargo.toml  LICENSE  README.md  a.out  build.rs  cell_size.s  fib.bf  out.c  output.c  simplify.s  test.c  test.fr  test.s
examples/: basic_ptr.fr  cprint.fr  free.fr  hello_world.fr  input.fr  playground.fr  pointers.fr  return.fr  reverse_polish_notation.fr  smpl.fr
src/: bin.rs  compile.rs  env.rs  ir.rs  lib.rs  parser.lalrpop  parser.rs  simplify.rs  smpl.rs  tokens.rs
