[package]
name = "fr"
version = "0.1.0"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
description = "A programming language with an unusual compiler backend"
homepage = "https://github.com/adam-mcdaniel/free"
website = "https://github.com/adam-mcdaniel/free"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fr"
path = "src/bin.rs"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lazy_static = "1.4"
lalrpop = "0.17.2"
lalrpop-util = "0.17.2"
regex = "1.3"
comment = "0.1"
rand = "0.7"
clap = "2.33"
